Changes for 2.2.16rc1

New features:
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)

Bug fixes:
........S. [ZBX-10694] reverted hypervisor health status to HostSystem.overallStatus property (wiper)
.......PS. [ZBX-11213] fixed database monitoring keys (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.15

2.2.15rc1 was released as 2.2.15 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.15rc1

New features:
...G...... [ZBXNEXT-3389] removed value length limitation in zabbix_sender when reading data from file/stream (wiper)

Bug fixes:
........S. [ZBX-11204] fixed parameter parsing in calculated items when it contains double quote escaping (Sergejs)
.......PS. [ZBX-5448] fixed possible delay when proxy sends cached history to server (vso)
.......PS. [ZBX-7595] fixed long SNMP OID not being accepted (vso)
....I..... [ZBX-7108] fixed error when upgrading graph_theme table in proxy database from 1.8 to 2.0 (vso)
...G...PS. [ZBX-11245] fixed escaped double quote parsing in quoted parameters in array in item key parameters (gleb)
....I..... [ZBX-11175] fixed compilation failure for OpenBSD 5.8, 5.9, 6.0 (vso)
..F....... [ZBX-8897] increased performance of Monitoring->Events page (Sasha)
A......... [ZBX-11143] added missing space in CTrigger.php SQL query (Cemeris)
A......... [ZBX-11020] fixed "host.create" so that both "inventory" and "inventory_mode" are optional (asaveljevs)
.......PS. [ZBX-8489] removed ODBC request answer size limitation (viktors, wiper)
........S. [ZBX-10830] fixed SNMP trap to convert non-printable values from SNMPv3 to hexadecimal (viktors, zalex_ua)
........S. [ZBX-11124] fixed memory leak in process of deleting hosts, which occurs during lld processing (Sergejs)
........S. [ZBX-11099] reduced configuration cache lock time after host maintenance ends (wiper)